<resources>
    <string name="app_name">NoteManager</string>
    <string name="add_new_note_content_desc">Add new note</string>
    <string name="btn_save_note">Save</string>
    <string name="priority_text">Priority</string>
    <string name="delete_all_notes">Delete all Notes</string>
    <string name="title_edit_text_hint">Title</string>
    <string name="description_edit_text_hint">Description</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Display and Theme</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Night mode</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="system_display_mode">System default display</string>
</resources>