<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="system_display_mode"
            app:summary="Use current system theme"
            app:title="@string/system_display_mode" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="night_mode"
            app:title="@string/sync_title" />


    </PreferenceCategory>
</PreferenceScreen>